Footer: Fix to allow blue border in dark mode

--- a/components/footer/assets/Footer.scss
+++ b/components/footer/assets/Footer.scss
@@ -13,5 +13,4 @@
 
 .not-govuk-page--dark .govuk-footer {
   background-color: $not-govuk-dark-mode-footer-colour;
-  border-color: $not-govuk-dark-mode-border-colour;
 }
